# pyvinecopulib

./: .travis.yml  .travis.yml.off  CMakeLists.txt  LICENSE  README.md  appveyor.yml
examples/: Untitled.ipynb  fitting_simulating_bicop.ipynb  fitting_simulating_vinecop.ipynb
src/: CMakeLists.txt  bicop.cpp  bicop_fit_controls.cpp  bicop_wrap.hpp  eigen_converters.cpp  family_enums.cpp  git_revision.cpp  pyvinecopulib.cpp  stl_converters.hpp  tools.cpp  version.cpp  vinecop.cpp  vinecop_fit_controls.cpp
tests/: CMakeLists.txt  test_bicop.py  test_bicop_readme_example.py  test_vinecop.py
tests/readme/: CMakeLists.txt  bicop_example_2.py  bicop_example_3.py  vinecop_example_1.py  vinecop_example_3.py  vinecop_example_4.py
tests/todo/: bicop_ctor_2arg_controls.py  bicop_fit_2arg.py  bicop_parameters_to_tau.py  vinecop_all_families.py  vinecop_all_rotations.py  vinecop_ctor_1arg_data.py  vinecop_ctor_2arg_data_controls.py  vinecop_example_2.py  vinecop_fit_controls_ctor_4arg_controls.py  vinecop_fit_controls_setters.py  vinecop_getters.py  vinecop_setters_fail.py
tests/unit/: bicop_aic.py  bicop_bic.py  bicop_calculate_npars.py  bicop_ctor_1arg.py  bicop_ctor_1arg_controls.py  bicop_ctor_2arg.py  bicop_ctor_3arg.py  bicop_ctor_noarg.py  bicop_families_BB.py  bicop_families_all.py  bicop_families_archimedean.py  bicop_families_elliptical.py  bicop_families_flip_by_rotation.py  bicop_families_itau.py  bicop_families_lt.py  bicop_families_nonparametric.py  bicop_families_one_par.py  bicop_families_parametric.py  bicop_families_rotationless.py  bicop_families_two_par.py  bicop_families_ut.py  bicop_family.py  bicop_fit.py  bicop_fit_2arg.py  bicop_fit_controls_ctor_1arg_double.py  bicop_fit_controls_ctor_1arg_family_set.py  bicop_fit_controls_ctor_1arg_string.py  bicop_fit_controls_ctor_2arg.py  bicop_fit_controls_ctor_3arg.py  bicop_fit_controls_ctor_4arg.py  bicop_fit_controls_ctor_5arg.py  bicop_fit_controls_ctor_noarg.py  bicop_fit_controls_setters.py  bicop_flip.py  bicop_hfunc1.py  bicop_hfunc2.py  bicop_hinv1.py  bicop_hinv2.py  bicop_loglik.py  bicop_pdf.py  (+42 more)
